--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://18.218.40.183:8081/#browse/browse:maven-releases/</url>
+	      <url> http://18.224.27.208:8081/repository/TestMaven/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.218.40.183:8081/#browse/browse:maven-snapshots/</url>
+	      <url>http://18.224.27.208:8081/repository/TestMaven1/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
