--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<version>0.0.2</version>
 	
-	<name>maven-web-app</name>
+	<name>maven-web-applications</name>
 
 	<description>Maven Web Project for Java Project</description>
 
